# Linear_Programming

./: CMakeLists.txt  Dual_Primal.cpp  Dual_Primal.h  README.md  Simplex.cpp  Simplex.h  main.cpp
